--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <div class="caixa-publico">
                         <h1>FORMATURA</h1>
-                        <img src="img/aniversario.png" alt="">
+                        <img src="img/graduation_1098887.png" alt="">
                         <p>Celebre essa conquista com um serviço à altura do seu momento bastante inesquecível.</p>
                     </div>
                     <div class="caixa-publico">
