--- a/sobre.html
+++ b/sobre.html
@@ -27,7 +27,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main-sobre">
         <section class="sobre-contain">
             <h1>Sobre nós</h1>
             
