--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
     <footer>
         <div class="contactos" id="contactos">
             <h1>Contactos</h1>
-            <a href="www.facebook.com" ><img src="img/facebook.png" alt=""> <span>AGL SERVICE</span></a> <br>
-            <a href="www.facebook.com" target="_blank"><img src="img/whatsapp.png" alt=""> <span>957 098 987</span></a> <br>
-            <a href="www.facebook.com" target="_blank"><img src="img/instagram.png" alt=""> <span>AGL_SERVICE</span></a>
+            <a href="https://www.facebook.com/profile.php?id=61551453395534" ><img src="img/facebook.png" alt=""> <span>AGL SERVICE</span></a> <br>
+            <a href="https://wa.link/rglwas" target="_blank"><img src="img/whatsapp.png" alt=""> <span>957 098 987</span></a> <br>
+            <a href="https://www.instagram.com/agl.service?igsh=MTJpdDBiOTZ4dHJ4bA==" target="_blank"><img src="img/instagram.png" alt=""> <span>AGL_SERVICE</span></a>
             <br>
             <a href="mailto:aglservice@gmail.com" ><img src="img/email.png" alt=""><span>aglservice4@gmail.com</span></a>
             <br>
