--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="caixa-publico">
                         <h1>EVENTOS CORPORATIVO</h1>
                         <img src="img/corporate.png" alt="">
-                        <p>Profissionalismo e organização para causar uma ótima impressão em cada detalhe.</p>
+                        <p>Boa postura e organização para causar uma ótima impressão em cada detalhe.</p>
                     </div>
                 </div>
               </section>
